# agent-os

./: .gitignore  CLAUDE.md  Makefile  README.md
app/: Package.swift  project.yml
app/AgentOS.xcodeproj/: project.pbxproj
app/Sources/AgentOS/: AgentOSApp.swift  ContentView.swift
backend/: Cargo.toml
backend/src/: main.rs  types.rs
backend/src/api/: bots.rs  events.rs  health.rs  memory.rs  mod.rs  ws.rs
backend/src/bot/: event_buffer.rs  idle_manager.rs  manager.rs  mod.rs  session_store.rs  supervisor.rs
backend/src/engine/: adapter.rs  claude.rs  codex.rs  kimi.rs  mod.rs  process.rs
backend/src/memory/: crystal.rs  mod.rs  stream.rs
backend/src/sensor/: mod.rs
backend/src/skill/: mod.rs
data/bots/: 07b9813d-ea95-4cfe-8a57-ec4f390f93ad.json  8c7ea5fe-1afd-4931-a1ec-898b3da5337d.json  cc5838cd-934f-4815-95ab-d5daaeb145ab.json
data/sessions/: 07b9813d-ea95-4cfe-8a57-ec4f390f93ad.jsonl  8c7ea5fe-1afd-4931-a1ec-898b3da5337d.jsonl  cc5838cd-934f-4815-95ab-d5daaeb145ab.jsonl
lifekit/: Package.swift
lifekit/Sources/LifeKit/: EventBuffer.swift  LifeKit.swift  Models.swift  Privacy.swift  Transport.swift
lifekit/Tests/LifeKitTests/: LifeKitTests.swift
memory/bedrock/: SOUL.md  SYSTEM.md
memory/crystal/: body.md  goals.md  identity.md  insights.md  patterns.md  people.md  projects.md  skills.md  state.md  time.md  wealth.md
memory/mirror/monthly/: template.md
memory/sensors/: calendar.yaml  contacts.yaml  finance.yaml  git.yaml  health.yaml  screen.yaml
memory/stream/: 2026-03-03.jsonl
skills/: README.md
skills/git-workflow/: SKILL.md
(+15 files in other folders)
